--- a/BugTracker/Views/Projects/AllProjects.cshtml
+++ b/BugTracker/Views/Projects/AllProjects.cshtml
@@ -31,6 +31,9 @@
             @Html.DisplayNameFor(model => model.ProjectUsers)
         </th>
         <th>
+            @Html.DisplayName("Resolved Tickets")
+        </th>
+        <th>
             @Html.DisplayName("Tickets : ")
         </th>
         <th></th>
@@ -48,6 +51,9 @@
                     @Html.DisplayFor(modelItem => user.User.UserName)
                     <br />
                 }
+            </td>
+            <td>
+                
             </td>
             <td>
                 <table class="table">
